exit after searh dont work

--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -13,7 +13,7 @@ FLAGS = -Wall -Wextra -Werror
 all = $(NAME)
 
 $(NAME):
-		@clang++ -o $(NAME) $(SRCS) $(FLAGS)
+		@clang++ -o $(NAME) $(SRCS) $(HEADER) $(FLAGS)
 		@echo "\x1b[34m day 00 ex00 is ready\x1b[0m"
 
 
