--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -10,15 +10,16 @@ FLAGS = -Wall -Wextra -Werror
 
 all = $(NAME)
 
-$(NAME): $(OBJS)
-		@echo "\x1b[34m CPP-module day 00 is ready\x1b[0m"
-		@clang++ -o $(NAME) $(OBJS) $(FLAGS)
+$(NAME):
+		@clang++ -o $(NAME) $(SRCS) $(FLAGS)
+		@echo "\x1b[34m day 00 ex00 is ready\x1b[0m"
+
 
 clean:
-			rm -rf $(OBJS)
+			@rm -rf $(OBJS)
 
 fclean:	clean
-			rm -rf $(NAME)
+			@rm -rf $(NAME)
 
 re: fclean $(NAME)
 
